# docai

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dl.txt  requirements.txt
.github/workflows/: ci.yml
configs/: data.yaml
data/synthetic/: README.md
docs/: ARCHITECTURE.md  IMPROVEMENTS.md  RESULTS.md
scripts/: generate_synthetic_docs.py  make_figures.py  run_demo.py  run_ocr_ablation.py
src/docai/: __init__.py  config.py  pipeline.py  schemas.py
src/docai/api/: main.py
src/docai/evaluation/: __init__.py  detection_metrics.py  nlp_metrics.py  ocr_metrics.py
src/docai/nlp/: __init__.py  baseline_tfidf.py  classifier.py  ner.py  train_classifier.py  train_ner.py
src/docai/ocr/: __init__.py  tesseract_ocr.py
src/docai/optimize/: __init__.py  benchmark.py  onnx_export.py
src/docai/preprocessing/: __init__.py  opencv_ops.py
src/docai/semantic/: __init__.py  index.py
src/docai/vision/: __init__.py  train_yolo.py  yolo_detector.py
tests/: test_metrics.py  test_preprocessing.py
ui/: streamlit_app.py
